fixing right size flexbox alignment

--- a/style.css
+++ b/style.css
@@ -17,10 +17,12 @@
 }
 #logo{
     width:80%;
-    margin-top:100%;
+    margin-top:40%;
     margin-bottom:5vh
 }
 #right-1row{
+    float:right;
+    
     display:flex;
     flex-wrap:wrap;
 }
